# PiPyPOC

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: auto_release.yml  pipa-upload.yml  version_bump.yml
sample_pipa_package/: __init__.py  hello.py
tests/: test_hello.py
